# cmediasoup

./: .gitignore  INSTALL.md  README.md  client.bat  mediasoup-worker.vcxproj  mediasoup-worker.vcxproj.filters  server.bat
UML/: TLSv1.x  mediasoup.oom
app/: .eslintrc.js  index.html
app/lib/: RoomClient.js  index.jsx
app/stylus/components/: PeerView.styl  Peers.styl
broadcasters/: ffmpeg.sh
ctest/googcc/: CMakeLists.txt  test_bitrate_estimator.cpp
doc/: Produce.xmind
include/: Utils.hpp
include/RTC/: DtlsTransport.hpp  IceCandidate.hpp  IceServer.hpp  NackGenerator.hpp  Producer.hpp  RateCalculator.hpp  RtpDictionaries.hpp  RtpPacket.hpp
include/RTC/RTCP/: Packet.hpp
mediasouptestcase/: package.json
server/: .eslintrc.js  config.js  package.json  server.js
server/lib/: Room.js
src/: DepLibUV.cpp
src/Channel/: ChannelSocket.cpp
src/PayloadChannel/: PayloadChannelSocket.cpp
src/RTC/: DtlsTransport.cpp  IceServer.cpp  NackGenerator.cpp  Producer.cpp  RateCalculator.cpp  Router.cpp  RtpPacket.cpp  RtpStream.cpp  RtpStreamRecv.cpp  RtpStreamSend.cpp  SeqManager.cpp  SimpleConsumer.cpp  StunPacket.cpp  Transport.cpp  TransportCongestionControlClient.cpp  WebRtcTransport.cpp
src/RTC/RTCP/: ReceiverReport.cpp
src/RTC/RtpDictionaries/: Parameters.cpp  RtpCodecParameters.cpp  RtpEncodingParameters.cpp  RtpHeaderExtensionParameters.cpp  RtpHeaderExtensionUri.cpp  RtpParameters.cpp
src/Utils/: String.cpp
